--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -17,7 +17,7 @@ body {
 
 main {
     display: grid;
-    grid-template-rows: 75vh repeat(auto-fit, 70vh);
+    grid-template-rows: 75vh repeat(3, 70vh);
     grid-template-columns: 1fr 1fr;
 }
 
@@ -40,7 +40,6 @@ h3 {
     svg {
         display: block;
         width: 100%;
-        height: 100%;
     }
 }
 
