--- a/src/assets/scss/vars.scss
+++ b/src/assets/scss/vars.scss
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700,800&subset=cyrillic,cyrillic-ext');
 
 $fontcol: #555555;
-$bgcol: #f6f6f6;
+// $bgcol: #f6f6f6;
+$bgcol: #ffffff;
 $orange: #f77a52;
 $dark: #332532;
 $blue: #4783b5;
